--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -1,17 +1,19 @@
-
- 
 #map {
-    width: 1000px;
-    height: 1000px;
-
+    width: 100%;
+    height: 600px;
 }
-/* Optional: Makes the sample page fill the window. */
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+td, th {
+  vertical-align: middle !important;
+  text-align: center !important;
 }
 
-.map_div {
-    height: 100%;
+svg {
+  height: 150px;
 }
+
+.btn {
+  margin-bottom: 10px;
+  margin-top: 10px;  
+}
+
+
